end_date is not required
