# docs/swagger.yaml
@@ -109,6 +109,10 @@ paths:
         name: start_date
         required: true
         type: string
+      - description: Emoployment End Date
+        in: query
+        name: end_date
+        type: string
       - description: Employment Status
         in: query
         name: employment_status_id
